osek/test/FreeOSEK/Error/Test_Sequence_01/test.oil
//OSEK OSEK {

OS	ExampleOS {
	STATUS = EXTENDED;
	PRETASKHOOK = TRUE;
	POSTTASKHOOK = TRUE;
   STARTUPHOOK = TRUE;
   ERRORHOOK = TRUE;
   SHUTDOWNHOOK = FALSE;
	MEMMAP = FALSE;
	USERESSCHEDULER = FALSE;
};

TASK Task1 {
   PRIORITY = 1;
   SCHEDULE = FULL; //or NON
   ACTIVATION = 1;
   AUTOSTART = FALSE;
	STACK = 256;
	TYPE = BASIC;
};

TASK Task2 {
	PRIORITY = 2;
	SCHEDULE = FULL; //or NON
	ACTIVATION = 1;
	AUTOSTART = FALSE;
	STACK = 256;
	TYPE = BASIC;
}

COUNTER HardwareCounter {
	MAXALLOWEDVALUE = 100000;
	TICKSPERBASE = 10;
	MINCYCLE = 1;
	TYPE = HARDWARE;
	COUNTER = HWCOUNTER0;
};

COUNTER Counter1 {
	MAXALLOWEDVALUE = 16;
	TICKSPERBASE = 1;
	MINCYCLE = 1;
	TYPE = SOFTWARE;
};

ALARM Alarm1 {
	COUNTER = Counter1;
	ACTION = ACTIVATETASK {
		TASK = Task2;
	};
	AUTOSTART = FALSE;
};


//APPMODE AppMode1;

//};
